# llm-longdoc-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  deploy.md
docs/decisions/: 0001-file-checkpoint-store.md  0002-atomic-substep-and-laststep.md  0003-llm-as-judge.md  0004-provider-agnostic-llm.md  0005-mock-llm-in-ci.md  0006-composable-prompts.md  README.md
examples/report_from_brief/: brief.yaml
examples/report_from_brief/output/: output.md  state.json
pipeline/: __init__.py  __main__.py  _logging.py  _recovery.py  _time.py  api.py  atomic_write.py  cache.py  checkpoints.py  chunking.py  citation_verifier.py  context_tracker.py  docx_builder.py  llm_client.py  metrics.py  mock_llm.py  orchestrator.py  prompt_assembler.py  quality_gate.py  readability_editor.py
scripts/: smoke.sh
tests/: test_api.py  test_cache.py  test_checkpoints.py  test_chunking.py  test_citation_verifier.py  test_logging.py  test_metrics.py  test_orchestrator.py  test_prompt_assembler.py  test_quality_gate.py  test_readability.py  test_retry_fallback.py  test_security_url.py
