[project]
name = "llm-longdoc-pipeline"
version = "0.1.0"
description = "A reliable orchestration engine for multi-step LLM document generation: atomic checkpoints, auto-resume, section consistency, LLM-as-judge quality gates and citation verification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
docx = ["python-docx>=1.1"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
llm-longdoc = "pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
