[project]
name = "llm-longdoc-pipeline"
version = "0.1.0"
description = "A reliable orchestration engine for multi-step LLM document generation: atomic checkpoints, auto-resume, section consistency, LLM-as-judge quality gates and citation verification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
docx = ["python-docx>=1.1"]
yaml = ["pyyaml>=6.0"]
# Линтер/тайпчекер запинены точно: незапиненный ruff в CI подтянул 0.16.0 и
# ввёл новые правила (RUF022/BLE001/PIE810), краснящие зелёный локально прогон.
# Пин = воспроизводимый CI, совпадающий с локально проверенным состоянием.
dev = ["pytest>=8.0", "ruff==0.15.22", "mypy==2.3.0"]

[project.scripts]
llm-longdoc = "pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# Target 3.12 so mypy accepts PEP 695 `type` statements in third-party stubs (numpy 2.5+).
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
